DevJourney/force-app/main/default/objects/Case_Party__c/Case_Party__c.object-meta.xml
<CustomObject>
    <label>Case Party</label>
    <nameField>
        <label>Case Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Party</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>