DevJourney/force-app/main/default/objects/Case_Party__c/fields/Case_Party__c.field-meta.xml
<CustomField>
    <fullName>Case_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Party</label>
    <referenceTo>Case_Party__c</referenceTo>
    <relationshipLabel>Case Party</relationshipLabel>
    <relationshipName>Case_Party</relationshipName>
    <type>Lookup</type>
</CustomField>