DevJourney/force-app/main/default/objects/Case_Party__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Party</relationshipLabel>
    <relationshipName>Case_Party</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>