DevJourney/force-app/main/default/objects/Case_Party__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>